# Grafica

./: .gitignore  CMakeLists.txt  DotDir.cpp  DotDir.h  README.md  Sphere.h  Transformation.h  compareScript.cpp  informationNeeds_761783_755769.xml  main  main.cpp
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: IndexFiles.launch  New_configuration.launch  SearchFiles.launch
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.core/: assumedExternalFilesCache  savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.jdt.ui/: QualifiedTypeNameHistory.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
.metadata/.plugins/org.eclipse.wst.xml.core/: system_catalog.xml
Practica1/: .classpath
Practica1/src/org/apache/lucene/demo/: IndexFiles.java  SearchFiles.java
Practica2/: .classpath
Practica2/src/org/apache/lucene/demo/: IndexFiles.java  SearchFiles.java  SpanishAnalyzer2.java
lib/: BoundingBox.h  BoundingVolume.h  ConcurrentBoundedQueue.h  DotDir.h  Figure.h  FigureProperties.h  Image.h  Lab.h  LightSource.h  Plane.h  Ray.h  Rgb.h  Scene.h  Sensor.h  Sphere.h  ToneMapper.h  Transformation.h  Triangle.h  TriangleMesh.h
lib/Basics/: DotDir.cpp  DotDir.hpp  Ray.cpp  Ray.h  Ray.hpp  Transformation.cpp  Transformation.h  Transformation.hpp
lib/GeometricFigures/: Figure.cpp  Figure.h  Figure.hpp  LightSource.cpp  LightSource.h  LightSource.hpp  Plane.cpp  Plane.h  Plane.hpp  Sphere.cpp  Sphere.h  Sphere.hpp  Triangle.cpp  Triangle.h  Triangle.hpp  TriangleMesh.cpp  TriangleMesh.h  TriangleMesh.hpp
lib/Imaging/: Image.cpp  Image.h  Image.hpp  Lab.cpp  Lab.h  Lab.hpp  Rgb.cpp  Rgb.h  ToneMapper.cpp  ToneMapper.h  ToneMapper.hpp
lib/Sensor/: Sensor.cpp  Sensor.h  Sensor.hpp
lib/Structures/: BoundingBox.cpp  BoundingBox.h  BoundingBox.hpp  BoundingVolume.cpp  BoundingVolume.h  BoundingVolume.hpp  ConcurrentQueue.cpp  ConcurrentQueue.h  Scene.cpp  Scene.h  Scene.hpp
practica1/: main.cpp
practica2/: ToneMapper.h  main.cpp
practica3/: Makefile  concurso.h  main.cpp  main2  main2.cpp  sacaImagenes.sh  tests.xlsx
